# FeiShuAI_Competition

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PROGRESS_2026-04-28.md  README.md  RELEASE_GUIDE.md  ROADMAP_v0.2.md  ROADMAP_v0.3.md  SECURITY.md  SUBMISSION_CHECKLIST.md  pyproject.toml  test.sh  wrangler.jsonc  wrangler.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-apk.yml  ci.yml  release.yml
config/: policies.yaml
data/: attack_report.json  attack_report.md
desktop/: .gitignore  README.md
desktop/sidecar/: bootstrap.py  sentinel-mcp-server.spec
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: 01_TECHNICAL_DESIGN.md  02_INSTALL_GUIDE.md  03_TEST_REPORT.md  04_DEMO_SCRIPT.md  04b_DEMO_VERBATIM.md  04c_DEMO_RECORDING_STEPS.md  05_DESKTOP_BUILD.md  06_MOBILE_BUILD.md  07_SUBMISSION_TEXT.md  08_LARK_INTEGRATION.md
examples/: _fake_tools.py  claude_desktop_config.json  red_blue_demo.py
examples/quick/: 01_allow.json  02_ask_user.json  03_deny_ssh.json  04_deny_shell.json  05_deny_attacker.json
guard/: __init__.py  audit.py  core.py  policies.py  sandbox.py
guard/detectors/: __init__.py  dlp.py  prompt_injection.py
mobile/: manifest-checksum.txt  twa-manifest.json.template
mobile/app/: build.gradle
mobile/app/src/main/: AndroidManifest.xml
mobile/app/src/main/java/com/trycloudflare/normal_engineers_citations_registration/twa/: Application.java  DelegationService.java  LauncherActivity.java
mobile/app/src/main/res/raw/: web_app_manifest.json
mobile/app/src/main/res/values/: strings.xml
pwa_dashboard/: __init__.py  auth.py  bootstrap.py  cloudflared.py  discovery.py  hooks_installer.py  integrations.py  lark_digest.py  push.py  server.py  watcher.py
pwa_dashboard/static/: manifest.webmanifest  sw.js
pwa_dashboard/templates/: index.html
sentinel_mcp/: README.md  __init__.py  approvals.py  auto_decisions.py  cli.py  cloud_relay.py  desktop.py  hook.py  lark_notifier.py  proxy.py  runtime_mode.py  strength.py  webhooks.py
server/: DEPLOY_VPS.md  deploy.sh  server.py
src/: index.js
tests/: test_ask_user_e2e.py  test_auto_decisions.py  test_bootstrap.py  test_desktop.py  test_discovery.py  test_dlp_outbound.py  test_e2e_smoke.py  test_hook.py  test_integrations.py  test_lark_notifier.py  test_proxy.py  test_push.py  test_real_mcp.py  test_runtime_mode.py  test_strength.py  test_watcher.py  test_webhooks.py
tests/attack_cases/: cases.py  run_all.py
website/: Readme.md  index.html  manifest.webmanifest  mobile.html  zh.html
website/functions/: _lib.js
website/functions/api/approvals/: decide.js  list.js  push.js
website/functions/api/decisions/: poll.js
website/functions/api/events/: list.js  push.js
website/functions/api/pair/: redeem.js  register.js
