[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-mcp"
version = "0.3.0"
description = "Client-side AI Agent security framework — a stdio MCP proxy with policy-driven tool-call decisions, sandbox enforcement, DLP, and human-in-the-loop approvals."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Sentinel-MCP Team" },
]
keywords = ["mcp", "model-context-protocol", "ai-security", "agent-security", "prompt-injection", "dlp", "sandbox"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dashboard = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "pydantic>=2.5",
    "pywebpush>=2.0",
    "cryptography>=42",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://sentinel-mcp.dev"
Repository = "https://github.com/IveGotMagicBean/FeiShuAI_Competition"
Issues = "https://github.com/IveGotMagicBean/FeiShuAI_Competition/issues"

[project.scripts]
sentinel-mcp = "sentinel_mcp.cli:main"
sentinel-mcp-desktop = "sentinel_mcp.desktop:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sentinel_mcp*", "guard*", "pwa_dashboard*"]
exclude = ["tests*", "examples*", "desktop*", "data*"]

[tool.setuptools.package-data]
"sentinel_mcp" = ["*.md", "config/*.yaml"]
"pwa_dashboard" = ["templates/*.html", "static/*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
# 测试需要先 sys.path.insert 把仓库根注入再 import 业务包
"tests/*.py" = ["E402"]
