[package]
name = "sentinel-mcp-desktop"
version = "0.2.0"
description = "Sentinel-MCP desktop shell"
authors = ["Sentinel team"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "sentinel_mcp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
strip = true
